# unfair-fl

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
configs/: default.yaml  defence_fairness_testing.yaml  example.yaml
configs/templates/: adult.yaml  backdoor_attack.yaml  cifar10.yaml  differential_privacy.yaml  fair_detection.yaml  fairness_attack.yaml  krum.yaml  no_attack.yaml  no_defence.yaml  reddit.yaml  trimmed_mean.yaml
scripts/: AD_FA_DP_GRID.sh  CI_FA_DP_GRID.sh  gen_template.sh  slurm.sh
src/: client.py  defence_fairness.py  evaluation.py  graph_gen.py  main.py  server.py  util.py
src/attacks/: __init__.py  backdoor_dataset.py  model_replacement.py  typing.py  unfair_dataset.py  update_prediction.py
src/datasets/: __init__.py  adult.py  cifar10.py  format_data.py  reddit.py  typing.py  util.py
src/defences/: __init__.py  diff_priv.py  fair_detect.py  krum.py  trim_mean.py  typing.py
src/models/: __init__.py  fully_connected.py  lstm.py  resnet_50.py
